# home-automation

./: CMakeLists.txt  google_test.cbp
tests/: main.cpp  test.cpp
